--- a/ecsite-g2/src/main/resources/templates/login/signIn.html
+++ b/ecsite-g2/src/main/resources/templates/login/signIn.html
@@ -8,7 +8,20 @@
 	 <body>
 		<h2>ユーザー登録入力画面</h2>
 		
-		<form action="#" method="get" th:action="@{/confirm}">
+		
+		
+		<form method="post" th:action="@{/confirm}" th:object="${su}">
+			<p>ニックネーム：<input type="text" th:field="*{nickName}"></p>
+			<div th:if="${#fields.hasErrors('nickName')}"  th:errors="*{nickName}">エラー</div>
+			<p>パスワード：<input type="password" th:field="*{password}"></p>
+			<div th:if="${#fields.hasErrors('password')}"  th:errors="*{password}">エラー</div>
+			<p>管理者権限：<input type="checkbox" th:field="*{adminFlag}"></p>
+			<div th:if="${#fields.hasErrors('adminFlag')}"  th:errors="*{adminFlag}">エラー</div>
+			<p>メールアドレス：<input type="text" th:field="*{email}"></p>
+			<div th:if="${#fields.hasErrors('email')}"  th:errors="*{email}">エラー</div>
+			<p>電話番号：<input type="text" th:field="*{phone_number}"></p>
+			<div th:if="${#fields.hasErrors('phone_number')}"  th:errors="*{phone_number}">エラー</div>
+		
 			<input type="submit" value="確認画面">
 		</form>
 
