--- a/ecsite-g2/src/main/resources/templates/login/signIn.html
+++ b/ecsite-g2/src/main/resources/templates/login/signIn.html
@@ -11,15 +11,16 @@
 		
 		
 		<form method="post" th:action="@{/confirm}" th:object="${su}">
-			<p>ニックネーム：<input type="text" th:field="*{nickName}"></p>
+			<p>ニックネーム<br><input type="text" th:field="*{nickName}"></p>
 			<div th:if="${#fields.hasErrors('nickName')}"  th:errors="*{nickName}">エラー</div>
-			<p>パスワード：<input type="password" th:field="*{password}"></p>
+			<p>パスワード<br><input type="password" th:field="*{password}"></p>
 			<div th:if="${#fields.hasErrors('password')}"  th:errors="*{password}">エラー</div>
-			<p>管理者権限：<input type="checkbox" th:field="*{adminFlag}"></p>
+			<p>もう一度パスワードを入力してください<br><input type="password" name="confirmPassword"></p>
+			<p>管理者権限<br><input type="checkbox" th:field="*{adminFlag}"></p>
 			<div th:if="${#fields.hasErrors('adminFlag')}"  th:errors="*{adminFlag}">エラー</div>
-			<p>メールアドレス：<input type="text" th:field="*{email}"></p>
+			<p>メールアドレス<br><input type="text" th:field="*{email}"></p>
 			<div th:if="${#fields.hasErrors('email')}"  th:errors="*{email}">エラー</div>
-			<p>電話番号：<input type="text" th:field="*{phone_number}"></p>
+			<p>携帯電話番号<br><input type="text" th:field="*{phone_number}"></p>
 			<div th:if="${#fields.hasErrors('phone_number')}"  th:errors="*{phone_number}">エラー</div>
 		
 			<input type="submit" value="確認画面">
