--- a/ecsite-g2/src/main/resources/templates/login/complete.html
+++ b/ecsite-g2/src/main/resources/templates/login/complete.html
@@ -8,7 +8,7 @@
 	 <body>
 		<h2>完了画面</h2>
 		
-		<form action="#" method="get" th:action="@{/index}">
+		<form action="#" method="get" th:action="@{/login}">
 			<input type="submit" value="ログイン画面">
 		</form>
 	
