システム連携

--- a/ecsite-g2/src/main/resources/templates/manager_customer_complete.html
+++ b/ecsite-g2/src/main/resources/templates/manager_customer_complete.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>操作が終わりました。</h1>
-    <a href="" th:href=@{/manager/customerlist} target="_blank">顧客一覧画面へ</a>
+    <a href="" th:href="@{/manager/customerlist}">顧客一覧画面へ</a>
 
 </body>
 
