--- a/ecsite-g2/src/main/resources/templates/login_temp.html
+++ b/ecsite-g2/src/main/resources/templates/login_temp.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <meta charset="UTF-8">
-    <title>簡易ログイン</title>
+    <title>管理者ログイン</title>
+    <link rel="stylesheet" th:href="@{/Manager_style.css}">
 </head>
-
 <body>
-    <h2>ログイン（仮）</h2>
 
-    <div th:if="${error}" style="color:red;">
+<div class="login-container">
+
+    <h2 class="title">管理者ログイン</h2>
+
+    <div th:if="${error}" class="error">
         <p th:text="${error}"></p>
     </div>
 
     <form th:action="@{/login/temp}" method="post">
         <label>ユーザー名：</label>
-        <input type="text" name="nickName" required><br>
+        <input type="text" name="nickName" required>
 
         <label>パスワード：</label>
-        <input type="password" name="password" required><br>
+        <input type="password" name="password" required>
 
         <button type="submit">ログイン</button>
     </form>
 
-    <hr>
-    <p>（ログイン済みの方は <a th:href="@{/logout}">ログアウト</a> できます）</p>
-</body>
+</div>
 
+</body>
 </html>
