--- a/ecsite-g2/src/main/resources/templates/manager_customer_list.html
+++ b/ecsite-g2/src/main/resources/templates/manager_customer_list.html
@@ -1,19 +1,60 @@
-<h2>顧客一覧</h2>
-<table>
-    <thead>
-        <tr>
-            <th>ID</th><th>名前</th><th>メール</th><th>詳細</th><th>編集</th><th>削除</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr th:each="user : ${userList}">
-            <td th:text="${user.ID}"></td>
-            <td th:text="${user.nickName}"></td>
-            <td th:text="${user.email}"></td>
-            <td><a th:href="@{'/manager/customer/' + ${user.ID}}">詳細</a></td>
-			<td><a th:href="@{'/manager/customer/edit/' + ${user.ID}}">編集</a></td>
-            <td><a th:href="@{'/manager/customer/delete/' + ${user.ID}}"
-                   onclick="return confirm('本当に削除しますか？');">削除</a></td>
-        </tr>
-    </tbody>
-</table>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+
+<head>
+    <meta charset="UTF-8">
+    <title>顧客一覧</title>
+    <link rel="stylesheet" th:href="@{/Manager_style.css}">
+</head>
+
+<body>
+
+	<div class="header">
+	    <div class="left">
+	        <div class="logo"></div>
+	        <div class="header-title">顧客一覧</div>
+	    </div>
+	    <div class="logout-link">
+	        <a href="#" onclick="return confirmLogout();">ログアウト</a>
+	    </div>
+	</div>
+
+    <div class="table-wrapper">
+        <table class="customer-table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>名前</th>
+                    <th>メール</th>
+                    <th>詳細</th>
+                    <th>編集</th>
+                    <th>削除</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="user : ${userList}">
+                    <td th:text="${user.ID}"></td>
+                    <td th:text="${user.nickName}"></td>
+                    <td th:text="${user.email}"></td>
+                    <td><a th:href="@{'/manager/customer/' + ${user.ID}}">詳細</a></td>
+                    <td><a th:href="@{'/manager/customer/edit/' + ${user.ID}}">編集</a></td>
+                    <td>
+                        <a th:href="@{'/manager/customer/delete/' + ${user.ID}}"
+                           onclick="return confirm('本当に削除しますか？');">削除</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <script>
+        function confirmLogout() {
+            if (confirm("ログアウトしますか？")) {
+                window.location.href = "/logout";
+            }
+            return false;
+        }
+    </script>
+</body>
+
+</html>
