--- a/ecsite-g2/src/main/resources/templates/no_permission.html
+++ b/ecsite-g2/src/main/resources/templates/no_permission.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>アクセスエラー</title>
-    <script>
-        window.onload = function () {
-            if (confirm("管理者権限が必要です。ログイン画面に移動しますか？")) {
-                window.location.href = "/login/temp";
-            } else {
-                history.back(); // 戻る
-            }
-        }
-    </script>
 </head>
 <body>
     <p>処理中...</p>
+
+    <script defer>
+        if (confirm("管理者権限が必要です。ログイン画面に移動しますか？")) {
+            window.location.href = "/login/temp";
+        } else {
+            history.back(); 
+        }
+    </script>
 </body>
 </html>
