--- a/ecsite-g2/src/main/resources/templates/no_permission.html
+++ b/ecsite-g2/src/main/resources/templates/no_permission.html
@@ -5,7 +5,7 @@
     <title>アクセスエラー</title>
     <script defer>
         if (confirm("管理者権限が必要です。ログイン画面に移動しますか？")) {
-            window.location.href = "/login/temp";
+            window.location.href = "/logintemp";
         } else {
             history.back();
         }
