ログイン画面のCSS作成

--- a/ecsite-g2/src/main/resources/templates/login/signIn.html
+++ b/ecsite-g2/src/main/resources/templates/login/signIn.html
@@ -3,10 +3,16 @@
  
 	 <head>
 	 	<meta charset="utf-8" />
+		<link rel="stylesheet" th:href="@{/login.css}">
 	 </head>
  
 	 <body>
-		<h2>ユーザー登録入力画面</h2>
+		
+		<header>
+			<a href="">TEAM2SITE</a>
+		</header>
+				
+		<h2>新規会員登録</h2>
 		
 		
 		
