--- a/ecsite-g2/src/main/resources/templates/index.html
+++ b/ecsite-g2/src/main/resources/templates/index.html
@@ -3,28 +3,37 @@
  
 	 <head>
 	 	<meta charset="utf-8" />
+		<link rel="stylesheet" th:href="@{/login.css}">
 	 </head>
  
 	 <body>
-		<h2>顧客ログイン画面</h2>
 		
-		<!-- エラーメッセージ表示 -->
-		<div th:if="${error}" style="color: red;">
-		    <p th:text="${error}"></p>
-		</div>
-
+		<header>
+			<a href="">TEAM2SITE</a>
+		</header>
 		
+		<main>	
+			<form method="post" th:action="@{/login}" th:object="${su}">
+				<div>ログイン</div>
+				<!-- エラーメッセージ表示 -->
+				<div th:if="${error}" style="color: red;" class="error">
+					<p th:text="${error}"></p>
+				</div>
+				<p><input type="text" th:field="*{phone_number}" placeholder="メールアドレスまたは携帯電話番号"></p>
+				<p><input type="password" th:field="*{password}" placeholder="パスワード"></p>
+				<input type="submit" value="ログイン">
+			</form>
+			
+			
+			<div class="text2">はじめてご利用の方</div>
+			<form action="#" method="get" th:action="@{/signIn}">
+				<input type="submit" value="新規会員登録">
+			</form>
+		</main>
 		
-		<form method="post" th:action="@{/login}" th:object="${su}">
-			<div>携帯電話番号またはEメールアドレスを入力</div>
-			<p>アカウント<br><input type="text" th:field="*{phone_number}"></p>
-			<p>パスワード<br><input type="password" th:field="*{password}"></p>
-			<input type="submit" value="ログイン">
-		</form>
-		
-		<form action="#" method="get" th:action="@{/signIn}">
-			<input type="submit" value="新規登録">
-		</form>
+		<footer>
+			<div>@TEAM2,Inc.</div>
+		</footer>
 	
 	 </body>
 
