--- a/ecsite-g2/src/main/resources/templates/no_permission.html
+++ b/ecsite-g2/src/main/resources/templates/no_permission.html
@@ -5,14 +5,8 @@
     <title>アクセスエラー</title>
 </head>
 <body>
-    <p>処理中...</p>
-
-    <script defer>
-        if (confirm("管理者権限が必要です。ログイン画面に移動しますか？")) {
-            window.location.href = "/login/temp";
-        } else {
-            history.back();
-        }
-    </script>
+	<p>管理者権限が必要です。</p>
+		<button onclick="window.location.href='/login'">ログイン画面に移動</button>
+		<button onclick="history.back()">戻る</button>
 </body>
 </html>
