--- a/ecsite-g2/src/main/resources/templates/login/signIn.html
+++ b/ecsite-g2/src/main/resources/templates/login/signIn.html
@@ -32,7 +32,7 @@
 			<input type="submit" value="確認画面">
 		</form>
 
-		<form action="#" method="get" th:action="@{/index}">
+		<form action="#" method="get" th:action="@{/login}">
 			<input type="submit" value="戻る">
 		</form>
 	
