--- a/ecsite-g2/src/main/resources/static/signin.css
+++ b/ecsite-g2/src/main/resources/static/signin.css
@@ -5,13 +5,33 @@ body {
         color: #333;
     }
 	
-	h2{
+	.text{
 		font-size: 25px;
 		margin-bottom: 60px;
 		font-weight: bold;
 		margin-left: 20px
 	}
 	
+	.text1{
+		font-family: Hiragino Kaku Gothic ProN, Hiragino Sans, Meiryo, Lucida Grande, Verdana, sans-serif;
+		font-size: 17px;
+		border-bottom: 1px solid #dcdcdc;
+		margin-left: 25px;
+		width: 550px;
+		}
+	
+	.text2{
+		font-size: 20px;
+		margin-bottom: 10px;
+		font-weight: bold;
+		text-align: center;		
+		}
+	
+	.text3 {
+		font-family: Hiragino Kaku Gothic ProN, Hiragino Sans, Meiryo, Lucida Grande, Verdana, sans-serif;
+		margin: 25px;
+		font-size: 14px;
+		}
 
     header {
         background-color: #efefef;
@@ -32,14 +52,20 @@ body {
 		background-color: white;
 	}
 
-    form {
+    .form1 {
         background-color: #efefef;
         max-width: 600px;
         margin: 0 auto 20px;
-        padding: 30px 25px;
+        padding: 17px 25px;
         border-radius: 6px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+		border: 1px solid rgb(219, 219, 219);
     }
+	
+	.form2 {
+		max-width: 600px;
+		margin: 0 auto 70px;
+	    }
 
     form div {
         font-size: 20px;
@@ -48,23 +74,13 @@ body {
 		text-align: center;
     }
 	
-	.text2{
-		font-size: 20px;
-		margin-bottom: 10px;
-		font-weight: bold;
-		text-align: center;		
-	}
 
-    p {
-        margin: 25px;
-        font-size: 14px;
-    }
-	
 	input::placeholder {
-	  font-family: "Meiryo", sans-serif;
-	  font-weight: bold;
-	  font-size: 16px;
-	  color: #ccc;
+		font-size: 15px;
+		width: 100%;
+		font-family: 'Segoe UI', sans-serif;
+		padding: 30px 0;
+		color: rgb(128, 128, 128);
 	}
 	
 	input[type="text"]:focus,
@@ -116,4 +132,8 @@ body {
 		color: rgb(128, 128, 128);
 		background-color: #efefef;
 		margin-top: 75px;
+	}
+	
+	.red{
+		color: red;
 	}
