--- a/ecsite-g2/src/main/resources/templates/login/signIn.html
+++ b/ecsite-g2/src/main/resources/templates/login/signIn.html
@@ -12,26 +12,27 @@
 			<a href="">TEAM2SITE</a>
 		</header>
 				
-		<h2>新規会員登録</h2>
+		<h2 class="text">新規会員登録</h2>
 		
 		
 		
-		<form method="post" th:action="@{/confirm}" th:object="${su}">
-			<p>基本情報</p>
-			<p>ニックネーム<br><input type="text" th:field="*{nickName}"></p>
+		<form method="post" th:action="@{/confirm}" th:object="${su}" class="form1">
+			<p class="text1">基本情報</p>
+
+			<p class="text3">ニックネーム　<span class="red">必須</span><input class="check" type="text" data-name="nickName" th:field="*{nickName}"></p>
 			<div th:if="${#fields.hasErrors('nickName')}"  th:errors="*{nickName}">エラー</div>
-			<p>パスワード<br><input type="password" th:field="*{password}"></p>
+			<p class="text3">パスワード　<span class="red">必須</span><input class="check" type="password" data-name="password" th:field="*{password}"></p>
 			<div th:if="${#fields.hasErrors('password')}"  th:errors="*{password}">エラー</div>
-			<p>もう一度パスワードを入力してください<br><input type="password" name="confirmPassword"></p>
-			<p>メールアドレス<br><input type="text" th:field="*{email}"></p>
+			<p class="text3">もう一度パスワードを入力してください　<span class="red">必須</span><input class="check" type="password" name="confirmPassword" data-name="confirmPassword"></p>
+			<p class="text3">メールアドレス　<span class="red">必須</span><input class="check" type="text" data-name="email" th:field="*{email}" placeholder="例) zozo@zozotown.jp"></p>
 			<div th:if="${#fields.hasErrors('email')}"  th:errors="*{email}">エラー</div>
-			<p>携帯電話番号<br><input type="text" th:field="*{phone_number}"></p>
+			<p class="text3">携帯電話番号　<span class="red">必須</span><input class="check" type="text" data-name="phone_number" th:field="*{phone_number}"></p>
 			<div th:if="${#fields.hasErrors('phone_number')}"  th:errors="*{phone_number}">エラー</div>
 		
 			<input type="submit" value="確認画面">
 		</form>
 
-		<form action="#" method="get" th:action="@{/login}">
+		<form action="#" method="get" th:action="@{/login}" class="form2">
 			<input type="submit" value="戻る">
 		</form>
 	
