--- a/ecsite-g2/src/main/resources/templates/mypage.html
+++ b/ecsite-g2/src/main/resources/templates/mypage.html
@@ -8,7 +8,7 @@
 <body>
 	<header>
 		<div class="mp_header">
-			<div class="sidebar_btn"></div>
+			<div class="sidebar_btn">三</div>
 			<div class="header_title">マイページ</div>
 			<div class="linkBox">
 				<a th:href="@{/login}" class="logout-link">ログアウト</a>
