--- a/ecsite-g2/src/main/resources/static/style.css
+++ b/ecsite-g2/src/main/resources/static/style.css
@@ -5,27 +5,51 @@ body {
   
  main {
 	margin-top: 80px;
+	display: flex;
+	    flex-direction: column;
  }
 
   .mp_header {
-    background-color: #4CAF50;
-    color: white;
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-	position: fixed;
-	width: 100%;
-	top: 0;
-	z-index: 100;
+	background-color: #efefef;
+	    padding: 15px 20px;
+	    display: flex;
+	    align-items: center;
+	    position: fixed;
+	    width: 100%;
+	    top: 0;
+	    z-index: 100;
+	    text-decoration: none;
+	    color: #111;
+	    font-weight: bold;
+	    font-size: 25px;
+  }
+  
+  .logout-link {
+      margin-right: 1rem;
+      text-decoration: none;
+      color: #000000;
+      font-weight: 300;
+      font-size: small;
   }
 
   .sidebar_btn {
     width: 30px;
     height: 30px;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
+	color: white;
     margin-right: 1rem;
     cursor: pointer;
+	border-radius: 10px;
+	transition: background 200ms,color 200ms, transform 200ms;
+	font-size: 20px;
+	text-align: center;
   }
+  
+  .sidebar_btn:hover {
+	background-color: rgb(192, 192, 192); /* 悬浮时浅灰背景 */
+	transform: scale(1.05);
+	
+    }
 
   .header_title {
     font-size: 1.5rem;
@@ -108,9 +132,9 @@ body {
   
   /* 当前选择按钮底端改为较粗的绿色线 */
     .sidebar button.current {
-      border-bottom: 3px solid #4CAF50;
+      border-bottom: 3px solid rgb(0, 0, 0);
   	color: white;
-  	background: green;
+  	background: rgb(0, 0, 0);
     }
 
   /* 文字前面加绿色长方形，和文字等高 */
@@ -119,7 +143,7 @@ body {
     display: inline-block;
     width: 20px;       /* 长方形宽度 */
     height: 1rem;      /* 和文字大小等高 */
-    background-color: #4CAF50;
+    background-color: rgb(128, 128, 128);
     margin-right: 0.5rem;
   }
 
@@ -132,17 +156,19 @@ body {
   
   
   .section {
-        margin: 20px 0;
-        padding: 15px;
-        background-color: #f9f9f9;
-        border-radius: 10px;
+	background-color: #efefef;
+	    width: 600px;
+	    margin: 0 auto 20px;
+	    padding: 30px 25px;
+	    border-radius: 6px;
+	    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
       }
       .section-title {
-        font-size: 1.2em;
-        font-weight: bold;
-        margin-bottom: 10px;
-        border-left: 5px solid #007acc;
-        padding-left: 10px;
+		font-size: 1.2em;
+		    font-weight: bold;
+		    margin-bottom: 10px;
+		    border-left: 5px solid #868686;
+		    padding-left: 10px;
       }
       .info-item {
         margin: 5px 0;
@@ -150,18 +176,28 @@ body {
 		position: relative;
       }
       .info-label {
-        width: 150px;
-        font-weight: bold;
+		width: 75px;
+		background: black;
+		font-weight: bold;
+		font-size: small;
+		color: white;
+		text-align: center;
+		padding: 3px;
+		border-radius: 5px;
+		margin-right: 20px;
       }
       .info-value {
         flex: 1;
       }
 	  
 	  .logout-link {
-	    margin-right: 1rem;
-	    text-decoration: none;
-	    color: white;
-	    font-weight: bold;
+		margin-right: 1rem;
+		    text-decoration: none;
+		    color: #ffffff;
+		    font-weight: 700;
+		    background: black;
+		    padding: 10px;
+		    border-radius: 10px;
 	  }
 
 	  .logout-link:hover {
