--- a/ecsite-g2/src/main/resources/templates/login/complete.html
+++ b/ecsite-g2/src/main/resources/templates/login/complete.html
@@ -11,7 +11,9 @@
 		<form action="#" method="get" th:action="@{/login}">
 			<input type="submit" value="ログイン画面">
 		</form>
-	
+		<footer>
+			<div>@TEAM2,Inc.</div>
+		</footer>
 	 </body>
 
   </html>
