--- a/ecsite-g2/src/main/resources/templates/manager_customer_complete.html
+++ b/ecsite-g2/src/main/resources/templates/manager_customer_complete.html
@@ -21,7 +21,9 @@
         <h2 class="page-title">操作が完了しました。</h2>
         <a th:href="@{/manager/customerlist}" class="button-link">顧客一覧画面へ</a>
     </div>
-
+	<footer>
+		<div>@TEAM2,Inc.</div>
+	</footer>
     <script>
         function confirmLogout() {
             if (confirm("ログアウトしますか？")) {
