--- a/ecsite-g2/src/main/resources/templates/manager_customer_edit.html
+++ b/ecsite-g2/src/main/resources/templates/manager_customer_edit.html
@@ -65,7 +65,9 @@
     <div style="text-align: center; margin-top: 20px;">
         <a href="/manager/customerlist">← 一覧に戻る</a>
     </div>
-
+	<footer>
+		<div>@TEAM2,Inc.</div>
+	</footer>
     <script>
         function confirmLogout() {
             if (confirm("ログアウトしますか？")) {
