--- a/ecsite-g2/src/main/resources/templates/manager_customer_list.html
+++ b/ecsite-g2/src/main/resources/templates/manager_customer_list.html
@@ -46,7 +46,9 @@
             </tbody>
         </table>
     </div>
-
+	<footer>
+		<div>@TEAM2,Inc.</div>
+	</footer>
     <script>
         function confirmLogout() {
             if (confirm("ログアウトしますか？")) {
