--- a/ecsite-g2/src/main/resources/static/style.css
+++ b/ecsite-g2/src/main/resources/static/style.css
@@ -209,3 +209,14 @@ body {
 	      margin-left: auto;
 	      padding-right: 10px;
 	  }
+	  
+	  footer{
+	  		font-size: 12px;
+	  		width: 100%;
+	  		text-align: center;
+	  		font-family: 'Segoe UI', sans-serif;
+	  		padding: 30px 0;
+	  		color: rgb(128, 128, 128);
+	  		background-color: #efefef;
+	  		margin-top: 75px;
+	  	}
