--- a/ecsite-g2/src/main/resources/templates/login/confirm.html
+++ b/ecsite-g2/src/main/resources/templates/login/confirm.html
@@ -48,7 +48,9 @@
 		<form action="#" method="get" th:action="@{/signIn}">
 			<input type="submit" value="戻る">
 		</form>
-	
+		<footer>
+			<div>@TEAM2,Inc.</div>
+		</footer>
 	 </body>
 
   </html>
