--- a/ecsite-g2/src/main/resources/templates/login/signIn.html
+++ b/ecsite-g2/src/main/resources/templates/login/signIn.html
@@ -35,7 +35,9 @@
 		<form action="#" method="get" th:action="@{/login}" class="form2">
 			<input type="submit" value="戻る">
 		</form>
-	
+		<footer>
+			<div>@TEAM2,Inc.</div>
+		</footer>
 	 </body>
 
   </html>
