--- a/ecsite-g2/src/main/resources/templates/mypage.html
+++ b/ecsite-g2/src/main/resources/templates/mypage.html
@@ -107,7 +107,9 @@
 		    <button type="submit" class="info-check">顧客一覧</button>
 		  </form>
 	  </div>
-
+	  <footer>
+	  	<div>@TEAM2,Inc.</div>
+	  </footer>
 	  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	  <script src="script.js" th:src="@{/script.js}"></script>
 </body>
